Bug 1998596 - Don't notify of moves on invisible windows.  a=dmeehan DONTBUILD

If we're not visible yet, our NSWindow might not have the correct frame
yet, causing us to perform a move to 0, 0, effectively losing the
anchoring.

It's a bit unclear whether we want to react to WindowMoved for popups
anyways, we generally assume we're in control of window positioning
(except for some wayland shenanigans).

Original Revision: https://phabricator.services.mozilla.com/D273726

Differential Revision: https://phabricator.services.mozilla.com/D273798